--- a/src/app/app.html
+++ b/src/app/app.html
@@ -167,6 +167,44 @@
           <p class="templates__empty">{{ 'sidebar.templates.empty' | t }}</p>
         </ng-template>
       </section>
+      <section class="custom-fonts">
+        <h5>{{ 'fonts.custom.title' | t }}</h5>
+        <div class="custom-fonts__form">
+          <label>
+            <span>{{ 'fonts.custom.name' | t }}</span>
+            <input type="text" [(ngModel)]="customFontNameModel" [ngModelOptions]="{ standalone: true }"
+              [placeholder]="'fonts.custom.namePlaceholder' | t" />
+          </label>
+          <label>
+            <span>{{ 'fonts.custom.weight' | t }}</span>
+            <select [(ngModel)]="customFontWeightModel" [ngModelOptions]="{ standalone: true }">
+              <option *ngFor="let weight of fontWeightValues" [ngValue]="weight">
+                {{ getFontWeightLabel(weight) }}
+              </option>
+            </select>
+          </label>
+          <label>
+            <span>{{ 'fonts.custom.file' | t }}</span>
+            <input #customFontFileInput type="file" accept=".ttf,.otf,.woff,.woff2"
+              (change)="onCustomFontFileSelected($event)" />
+          </label>
+          <button type="button" class="btn" (click)="registerCustomFont()"
+            [disabled]="!canRegisterCustomFont()">
+            {{ 'fonts.custom.add' | t }}
+          </button>
+        </div>
+        <ul class="custom-fonts__list" *ngIf="customFonts().length; else emptyFonts">
+          <li *ngFor="let font of customFonts()">
+            <span>{{ font.family }} · {{ getFontWeightLabel(font.weight) }}</span>
+            <button type="button" class="btn btn--ghost" (click)="removeCustomFont(font.id)">
+              {{ 'fonts.custom.remove' | t }}
+            </button>
+          </li>
+        </ul>
+        <ng-template #emptyFonts>
+          <p class="custom-fonts__empty">{{ 'fonts.custom.empty' | t }}</p>
+        </ng-template>
+      </section>
       <textarea class="json-editor" [(ngModel)]="coordsTextModel" [placeholder]="'sidebar.jsonPlaceholder' | t"
         spellcheck="false"></textarea>
       <div class="json-toolbar">
@@ -220,6 +258,54 @@
             <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
             <input type="number" [(ngModel)]="p.field.fontSize" min="8" max="72" />
           </label>
+          <label class="field">
+            <span class="field-label">{{ 'annotation.fields.font.label' | t }}</span>
+            <select [(ngModel)]="p.field.fontFamily">
+              <option *ngFor="let option of fontFamilyOptions()" [value]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.weight.label' | t }}</span>
+            <select [(ngModel)]="p.field.fontWeight">
+              <option *ngFor="let option of getFontWeightOptions(p.field.fontFamily)" [ngValue]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.align.label' | t }}</span>
+            <select [(ngModel)]="p.field.textAlign">
+              <option value="left">{{ 'annotation.fields.align.options.left' | t }}</option>
+              <option value="center">{{ 'annotation.fields.align.options.center' | t }}</option>
+              <option value="right">{{ 'annotation.fields.align.options.right' | t }}</option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.opacity.label' | t }}</span>
+            <input type="range" min="0" max="1" step="0.05" [ngModel]="p.field.opacity"
+              (ngModelChange)="p.field.opacity = +$event" />
+            <span class="field-hint">{{ p.field.opacity | number:'1.0-2' }}</span>
+          </label>
+          <div class="background-controls">
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.background.color' | t }}</span>
+              <input type="color" [ngModel]="p.field.backgroundColor ?? '#000000'"
+                (ngModelChange)="p.field.backgroundColor = $event" />
+            </label>
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.background.opacity' | t }}</span>
+              <input type="range" min="0" max="1" step="0.05" [disabled]="!p.field.backgroundColor"
+                [ngModel]="p.field.backgroundOpacity" (ngModelChange)="p.field.backgroundOpacity = +$event" />
+              <span class="field-hint">{{ p.field.backgroundOpacity | number:'1.0-2' }}</span>
+            </label>
+            <button type="button" class="btn btn--ghost"
+              (click)="p.field.backgroundColor = null; p.field.backgroundOpacity = 1"
+              [disabled]="!p.field.backgroundColor">
+              {{ 'annotation.fields.background.clear' | t }}
+            </button>
+          </div>
           <div class="color-section">
             <span class="field-label">{{ 'annotation.fields.color.label' | t }}</span>
             <div class="color-row">
@@ -275,6 +361,54 @@
             <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
             <input type="number" [(ngModel)]="e.field.fontSize" min="8" max="72" />
           </label>
+          <label class="field">
+            <span class="field-label">{{ 'annotation.fields.font.label' | t }}</span>
+            <select [(ngModel)]="e.field.fontFamily">
+              <option *ngFor="let option of fontFamilyOptions()" [value]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.weight.label' | t }}</span>
+            <select [(ngModel)]="e.field.fontWeight">
+              <option *ngFor="let option of getFontWeightOptions(e.field.fontFamily)" [ngValue]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.align.label' | t }}</span>
+            <select [(ngModel)]="e.field.textAlign">
+              <option value="left">{{ 'annotation.fields.align.options.left' | t }}</option>
+              <option value="center">{{ 'annotation.fields.align.options.center' | t }}</option>
+              <option value="right">{{ 'annotation.fields.align.options.right' | t }}</option>
+            </select>
+          </label>
+          <label class="field field-small">
+            <span class="field-label">{{ 'annotation.fields.opacity.label' | t }}</span>
+            <input type="range" min="0" max="1" step="0.05" [ngModel]="e.field.opacity"
+              (ngModelChange)="e.field.opacity = +$event" />
+            <span class="field-hint">{{ e.field.opacity | number:'1.0-2' }}</span>
+          </label>
+          <div class="background-controls">
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.background.color' | t }}</span>
+              <input type="color" [ngModel]="e.field.backgroundColor ?? '#000000'"
+                (ngModelChange)="e.field.backgroundColor = $event" />
+            </label>
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.background.opacity' | t }}</span>
+              <input type="range" min="0" max="1" step="0.05" [disabled]="!e.field.backgroundColor"
+                [ngModel]="e.field.backgroundOpacity" (ngModelChange)="e.field.backgroundOpacity = +$event" />
+              <span class="field-hint">{{ e.field.backgroundOpacity | number:'1.0-2' }}</span>
+            </label>
+            <button type="button" class="btn btn--ghost"
+              (click)="e.field.backgroundColor = null; e.field.backgroundOpacity = 1"
+              [disabled]="!e.field.backgroundColor">
+              {{ 'annotation.fields.background.clear' | t }}
+            </button>
+          </div>
           <div class="color-section">
             <span class="field-label">{{ 'annotation.fields.color.label' | t }}</span>
             <div class="color-row">
