--- a/src/app/pages/workspace/components/viewer/workspace-viewer.component.html
+++ b/src/app/pages/workspace/components/viewer/workspace-viewer.component.html
@@ -22,6 +22,22 @@
           <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
         </select>
       </label>
+      <div class="field-row field-row--toggles">
+        <div class="field field-toggle">
+          <span class="field-label">{{ 'annotation.fields.locked.label' | t }}</span>
+          <label class="toggle-control">
+            <input type="checkbox" [(ngModel)]="p.field.locked" />
+            <span>{{ 'annotation.fields.locked.toggle' | t }}</span>
+          </label>
+        </div>
+        <div class="field field-toggle">
+          <span class="field-label">{{ 'annotation.fields.hidden.label' | t }}</span>
+          <label class="toggle-control">
+            <input type="checkbox" [(ngModel)]="p.field.hidden" />
+            <span>{{ 'annotation.fields.hidden.toggle' | t }}</span>
+          </label>
+        </div>
+      </div>
       <label class="field">
         <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
         <input type="text" [(ngModel)]="p.field.value" [placeholder]="'annotation.fields.value.placeholder' | t" />
@@ -125,43 +141,62 @@
       <span class="editor-badge">{{ 'annotation.editingBadge' | t }}</span>
       <label class="field">
         <span class="field-label">{{ 'annotation.fields.text.label' | t }}</span>
-        <input type="text" [(ngModel)]="e.field.mapField"
+        <input type="text" [(ngModel)]="e.field.mapField" [disabled]="!!e.field.locked"
           [placeholder]="'annotation.fields.text.placeholder' | t" />
       </label>
       <label class="field">
         <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
-        <select [(ngModel)]="e.field.type">
+        <select [(ngModel)]="e.field.type" [disabled]="!!e.field.locked">
           <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
           <option value="check">{{ 'annotation.fields.type.options.check' | t }}</option>
           <option value="radio">{{ 'annotation.fields.type.options.radio' | t }}</option>
           <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
         </select>
       </label>
+      <div class="field-row field-row--toggles">
+        <div class="field field-toggle">
+          <span class="field-label">{{ 'annotation.fields.locked.label' | t }}</span>
+          <label class="toggle-control">
+            <input type="checkbox" [(ngModel)]="e.field.locked" />
+            <span>{{ 'annotation.fields.locked.toggle' | t }}</span>
+          </label>
+        </div>
+        <div class="field field-toggle">
+          <span class="field-label">{{ 'annotation.fields.hidden.label' | t }}</span>
+          <label class="toggle-control">
+            <input type="checkbox" [(ngModel)]="e.field.hidden" [disabled]="!!e.field.locked" />
+            <span>{{ 'annotation.fields.hidden.toggle' | t }}</span>
+          </label>
+        </div>
+      </div>
       <label class="field">
         <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
-        <input type="text" [(ngModel)]="e.field.value" [placeholder]="'annotation.fields.value.placeholder' | t" />
+        <input type="text" [(ngModel)]="e.field.value" [disabled]="!!e.field.locked"
+          [placeholder]="'annotation.fields.value.placeholder' | t" />
       </label>
       <label class="field field-small" *ngIf="e.field.type === 'number'">
         <span class="field-label">{{ 'annotation.fields.number.decimals.label' | t }}</span>
-        <input type="number" [(ngModel)]="e.field.decimals" min="0" />
+        <input type="number" [(ngModel)]="e.field.decimals" min="0" [disabled]="!!e.field.locked" />
       </label>
       <label class="field field-small" *ngIf="e.field.type === 'number'">
         <span class="field-label">{{ 'annotation.fields.number.appender.label' | t }}</span>
-        <input type="text" [(ngModel)]="e.field.appender"
+        <input type="text" [(ngModel)]="e.field.appender" [disabled]="!!e.field.locked"
           [placeholder]="'annotation.fields.number.appender.placeholder' | t" />
       </label>
       <div class="field-row field-row--metrics">
         <label class="field field-small field-size">
           <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
-          <input type="number" [(ngModel)]="e.field.fontSize" min="8" max="72" />
+          <input type="number" [(ngModel)]="e.field.fontSize" min="8" max="72" [disabled]="!!e.field.locked" />
         </label>
         <label class="field field-inline opacity-field field-opacity">
           <span class="field-label">{{ 'annotation.fields.opacity.label' | t }}</span>
           <div class="opacity-controls">
             <input type="range" min="0.1" max="1" step="0.05"
-              [ngModel]="e.field.opacity ?? 1" (ngModelChange)="vm.setFieldOpacity('edit', $event)" />
+              [ngModel]="e.field.opacity ?? 1" (ngModelChange)="vm.setFieldOpacity('edit', $event)"
+              [disabled]="!!e.field.locked" />
             <input type="number" min="0.1" max="1" step="0.05"
-              [ngModel]="e.field.opacity ?? 1" (ngModelChange)="vm.setFieldOpacity('edit', $event)" />
+              [ngModel]="e.field.opacity ?? 1" (ngModelChange)="vm.setFieldOpacity('edit', $event)"
+              [disabled]="!!e.field.locked" />
           </div>
         </label>
       </div>
@@ -171,6 +206,7 @@
           [class.font-dropdown--open]="vm.fontDropdownOpen('edit')">
           <button type="button" class="font-dropdown__trigger" (click)="vm.toggleFontDropdown('edit')"
             aria-haspopup="listbox" [attr.aria-expanded]="vm.fontDropdownOpen('edit')"
+            [disabled]="!!e.field.locked"
             [attr.aria-labelledby]="'edit-font-label'">
             <ng-container *ngIf="vm.fontSummaryOption(e.field.fontFamily) as selectedFont">
               <span class="font-dropdown__value">{{ selectedFont.label }}</span>
@@ -209,8 +245,10 @@
         <span class="field-label">{{ 'annotation.fields.background.label' | t }}</span>
         <div class="background-row">
           <input type="color" [value]="e.field.backgroundColor ?? '#ffffff'"
-            (input)="vm.setFieldBackground('edit', $any($event.target).value)" />
-          <button type="button" class="background-clear" (click)="vm.clearFieldBackground('edit')">
+            (input)="vm.setFieldBackground('edit', $any($event.target).value)"
+            [disabled]="!!e.field.locked" />
+          <button type="button" class="background-clear" (click)="vm.clearFieldBackground('edit')"
+            [disabled]="!!e.field.locked">
             {{ 'annotation.fields.background.clear' | t }}
           </button>
         </div>
@@ -218,12 +256,15 @@
       <div class="color-section">
         <span class="field-label">{{ 'annotation.fields.color.label' | t }}</span>
         <div class="color-row">
-          <input type="color" [(ngModel)]="e.field.color" (ngModelChange)="vm.onEditColorPicker($event)" />
+          <input type="color" [(ngModel)]="e.field.color" (ngModelChange)="vm.onEditColorPicker($event)"
+            [disabled]="!!e.field.locked" />
           <div class="color-inputs">
             <input type="text" [ngModel]="vm.editHexInput()" (ngModelChange)="vm.setEditColorFromHex($event)"
-              [ngModelOptions]="{ standalone: true }" [placeholder]="'annotation.color.hexPlaceholder' | t" />
+              [ngModelOptions]="{ standalone: true }" [placeholder]="'annotation.color.hexPlaceholder' | t"
+              [disabled]="!!e.field.locked" />
             <input type="text" [ngModel]="vm.editRgbInput()" (ngModelChange)="vm.setEditColorFromRgb($event)"
-              [ngModelOptions]="{ standalone: true }" [placeholder]="'annotation.color.rgbPlaceholder' | t" />
+              [ngModelOptions]="{ standalone: true }" [placeholder]="'annotation.color.rgbPlaceholder' | t"
+              [disabled]="!!e.field.locked" />
           </div>
         </div>
         <small class="color-hint">{{ 'annotation.color.hintEdit' | t }}</small>
