--- a/src/app/pages/workspace/components/viewer/workspace-viewer.component.html
+++ b/src/app/pages/workspace/components/viewer/workspace-viewer.component.html
@@ -1,5 +1,6 @@
 <main class="viewer" *ngIf="vm.pdfDoc as _">
-  <div class="canvas-container" #pdfViewer (mousemove)="vm.onViewerMouseMove($event)" (mouseleave)="vm.onViewerMouseLeave()">
+  <div class="canvas-container" #pdfViewer (mousemove)="vm.onViewerMouseMove($event)" (mouseleave)="vm.onViewerMouseLeave()"
+    appGuideAnchor="annotate">
     <canvas #pdfCanvas class="canvas canvas--pdf"></canvas>
     <canvas #overlayCanvas class="canvas canvas--overlay"></canvas>
     <div #annotationsLayer class="annotations-layer"></div>
