Add configurable keyboard shortcuts

--- a/src/app/pages/workspace/components/header/workspace-header.component.html
+++ b/src/app/pages/workspace/components/header/workspace-header.component.html
@@ -58,6 +58,13 @@
       </button>
     </div>
 
+    <div class="toolbar__group" role="group">
+      <button class="btn btn--icon" type="button" (click)="vm.openShortcutsDialog()">
+        <span class="btn__icon" aria-hidden="true">⌨️</span>
+        <span class="btn__label">{{ 'controls.shortcuts' | t }}</span>
+      </button>
+    </div>
+
     <app-language-selector class="header__language-selector" [languages]="vm.languages"
       [selectedLanguage]="vm.languageModel" (languageChange)="vm.onLanguageChange($event)" variant="compact">
     </app-language-selector>
